--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
   <title>Bikcraft</title>
 </head>
 <body>
-
   <header>
     <div class="logo">
       <img src="./img/bikcraft.svg" alt="Bikcraft">
     </div>
+
+    <nav aria-label="primaria" class="links">
+      <ul>
+        <li><a href="/">SOBRE</a></li>
+        <li><a href="/">PRODUTOS</a></li>
+        <li><a href="/">LOJAS</a></li>
+        <li><a href="/">CONTATO</a></li>
+      </ul>
+    </nav>
   </header>
   
-  <nav aria-label="primaria" class="links">
-    <a href="/">SOBRE</a>
-    <a href="/">PRODUTOS</a>
-    <a href="/">LOJAS</a>
-    <a href="/">CONTATO</a>
-  </nav>
-
   <main>
     <div class="conteudo">
 
