--- a/index.html
+++ b/index.html
@@ -27,30 +27,34 @@
     <div class="conteudo">
 
       <div class="introducao">
-        <span class="detail"></span>
-        <h1>Bicicletas Feitas a Mão</h1>
+        <h1 class="detail">Bicicletas Feitas a Mão</h1>
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p> 
         <a class="button" href="/">Ver Mais</a>
       </div>
       <img class="bike" src="./img/bicicleta.jpg" alt="bicicleta bikcraft preta">
   
+      
       <h2 class="subtitulo">Vantagens Bikcraft</h2>
   
-      <div class="vantagens">
+      <section class="vantagens">
         <div class="vantagens-item">
           <img src="./img/eletrica.svg" alt="">
           <h3>Motor Elétrico</h3>
           <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
-  
+        </div>
+        
+        <div class="vantagens-item">
           <img src="./img/velocidade.svg" alt="">
           <h3>40 km/h</h3>
           <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
-  
+        </div>
+
+        <div class="vantagens-item">
           <img src="./img/rastreador.svg" alt="">
           <h3>Rastreador</h3>
           <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
         </div>
-      </div>
+      </section>
     </div>
   </main>
 
