--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <img src="./img/bikcraft.svg" alt="Bikcraft">
     </div>
 
-    <nav aria-label="primaria" class="links">
-      <ul>
+    <nav aria-label="primaria">
+      <ul class="links">
         <li><a href="/">SOBRE</a></li>
         <li><a href="/">PRODUTOS</a></li>
         <li><a href="/">LOJAS</a></li>
@@ -26,14 +26,16 @@
   <main >
     <article class="conteudo" aria-labelledby="label-introducao">
       <div class="introducao">
-        <h1 id="label-introducao" class="detail">Bicicletas Feitas a Mão</h1>
+        <h1 id="label-introducao">Bicicletas Feitas a Mão</h1>
         <p>A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p> 
         <a class="button" href="/">Ver Mais</a>
       </div>
-      <img class="bike" src="./img/bicicleta.jpg" alt="bicicleta bikcraft preta">
+      <div class="introducao-fit">
+        <img class="bike" src="./img/bicicleta.jpg" alt="bicicleta bikcraft preta">
+      </div>
     </article>
 
-    <article class="conteudo" aria-labelledby="label-vantagens">
+    <article class="conteudo conteudo-vantagens" aria-labelledby="label-vantagens">
       <h2 id="label-vantagens" class="subtitulo">Vantagens Bikcraft</h2>
 
       <ul class="vantagens">
